syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.hermes";
option java_outer_classname = "ServicesProto";
option objc_class_prefix = "HLW";

package hermes;
import "base.proto";

service RandomGenerator {
    rpc Generate (Empty) returns (stream RandomNumber) {
    }
}

message RandomNumber {
    int64 value = 1;
}

service WebrtcServer {
    rpc StartServer (Empty) returns (WebrtcServerStartResult) {
    }
}

message WebrtcServerStartResult {
    Status status = 1;
}


service Webrtc {
    rpc Webrtc (WebrtcInfo) returns (stream WebrtcResponse) {
    }
}

message WebrtcInfo {
    WebrtcType type = 1;
}

enum WebrtcType {
    SENDER = 0;
    RECEIVER = 1;
}

message WebrtcResponse {
    Status status = 1;
}